working on scss stuff

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -38,8 +38,13 @@ $colors: (
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
-  dark:       #222
+  dark:       #222,
+  spursPink: #ef576c,
+  spursGreen: #00a2a4,
+  spursOrange: #ed8c3b
 );
+
+$text-color: #ed8c3b;
 
 
 // App iOS Variables
