--- a/src/pages/new-shit/new-shit.scss
+++ b/src/pages/new-shit/new-shit.scss
@@ -1,3 +1,9 @@
 page-new-shit {
   
-  }
+}
+
+.newShitContent {
+  background-color: color($colors, dark);
+  color: color($colors, danger);
+  font-weight: bold;
+}
