--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -34,18 +34,12 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #488aff,
-  secondary:  #32db64,
-  danger:     #f53d3d,
-  light:      #f4f4f4,
-  dark:       #222,
-  spursPink: #ef576c,
-  spursGreen: #00a2a4,
-  spursOrange: #ed8c3b
+  primary:    #ef576c,
+  secondary:  #00a2a4,
+  danger:     #ed8c3b,
+  light:      #a8a8aa,
+  dark:       #222
 );
-
-$text-color: #ed8c3b;
-
 
 // App iOS Variables
 // --------------------------------------------------
