added footer and started adding nba api

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -12,7 +12,7 @@ page-home {
 }
 
 .pTag {
-  color: color($colors, secondary);
+  color: color($colors, dark);
   border: 1px solid color($colors, primary);
   background-color: color($colors, danger);
 }
